# player

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
inc/: audio_decoder.h  demuxer.h  player.h
src/: audio_decoder.cpp  demuxer.cpp  main.cpp  player.cpp
